<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#ccc"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/id"
        android:text="@string/ID"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/title"
        android:textColor="#FF3D00"
        android:text="@string/Title"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/body"
        android:text="@string/BODY"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>