<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#ccc"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/id_user"
        android:text="@string/ID"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/name"
        android:textColor="#FF3D00"
        android:text="Name"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/user_name"
        android:text="UserName"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/email"
        android:text="Email"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/Address"
        android:text="ADDRESS"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/street"
        android:layout_marginLeft="30dp"
        android:text="@string/STREET"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/suite"
        android:layout_marginLeft="30dp"
        android:text="Suite"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/city"
        android:layout_marginLeft="30dp"
        android:text="City"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/zipcode"
        android:layout_marginLeft="30dp"
        android:text="ZipCode"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/geo"
        android:layout_marginLeft="30dp"
        android:text="Geo"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="60dp"
        android:id="@+id/lat"
        android:text="@string/LAT"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginLeft="60dp"
        android:id="@+id/lng"
        android:text="@string/LNG"
        android:layout_height="wrap_content" />



</LinearLayout>